feat: implement order creation with bank account validation and error handling