@@ -1,6 +1,6 @@
 package com.gap.ecommerceapp.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.gap.ecommerceapp.dto.OrderResult;
 import com.gap.ecommerceapp.model.Order;
 import com.gap.ecommerceapp.model.User;
 import com.gap.ecommerceapp.service.OrderService;
@@ -15,12 +15,13 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -37,18 +38,18 @@ class OrderControllerTest {
     @MockitoBean
     private UserService userService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
     private User testUser;
     private Order testOrder;
+    private String testBankAccountNumber;
 
     @BeforeEach
     void setUp() {
+        testBankAccountNumber = "1234567890";
+
         testUser = new User();
         testUser.setId(1L);
         testUser.setUsername("testuser");
-        testUser.setBankAccountNumber("1234567890");
+        testUser.setBankAccountNumber(testBankAccountNumber);
 
         testOrder = new Order();
         testOrder.setId(1L);
@@ -63,11 +64,13 @@ class OrderControllerTest {
     void purchaseProducts_ShouldCreateOrderSuccessfully() throws Exception {
         // Arrange
         Long userId = 1L;
+        OrderResult successResult = OrderResult.success(testOrder);
         when(userService.findById(userId)).thenReturn(Optional.of(testUser));
-        when(orderService.createOrder(testUser)).thenReturn(testOrder);
+        when(orderService.createOrder(testUser, testBankAccountNumber)).thenReturn(successResult);
 
         // Act & Assert
         mockMvc.perform(post("/api/orders/purchase/{userId}", userId)
+                .param("bankAccountNumber", testBankAccountNumber)
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -77,7 +80,7 @@ class OrderControllerTest {
                 .andExpect(jsonPath("$.status").value("CONFIRMED"));
 
         verify(userService, times(1)).findById(userId);
-        verify(orderService, times(1)).createOrder(testUser);
+        verify(orderService, times(1)).createOrder(testUser, testBankAccountNumber);
     }
 
     @Test
@@ -88,33 +91,38 @@ class OrderControllerTest {
 
         // Act & Assert
         mockMvc.perform(post("/api/orders/purchase/{userId}", userId)
+                .param("bankAccountNumber", testBankAccountNumber)
                 .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("User not found"));
 
         verify(userService, times(1)).findById(userId);
-        verify(orderService, never()).createOrder(any(User.class));
+        verify(orderService, never()).createOrder(any(User.class), any(String.class));
     }
 
     @Test
-    void purchaseProducts_ShouldReturnBadRequest_WhenServiceThrowsException() throws Exception {
+    void purchaseProducts_ShouldReturnBadRequest_WhenServiceReturnsError() throws Exception {
         // Arrange
         Long userId = 1L;
+        OrderResult errorResult = OrderResult.error("Cart is empty");
         when(userService.findById(userId)).thenReturn(Optional.of(testUser));
-        when(orderService.createOrder(testUser)).thenThrow(new IllegalArgumentException("Cart is empty"));
+        when(orderService.createOrder(testUser, testBankAccountNumber)).thenReturn(errorResult);
 
         // Act & Assert
         mockMvc.perform(post("/api/orders/purchase/{userId}", userId)
+                .param("bankAccountNumber", testBankAccountNumber)
                 .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Cart is empty"));
 
-        verify(orderService, times(1)).createOrder(testUser);
+        verify(orderService, times(1)).createOrder(testUser, testBankAccountNumber);
     }
 
     @Test
     void getUserOrders_ShouldReturnUserOrders() throws Exception {
         // Arrange
         Long userId = 1L;
-        List<Order> orders = Arrays.asList(testOrder);
+        List<Order> orders = List.of(testOrder);
         when(orderService.getUserOrders(userId)).thenReturn(orders);
 
         // Act & Assert
@@ -133,7 +141,7 @@ class OrderControllerTest {
     void getUserOrders_ShouldReturnEmptyList_WhenNoOrders() throws Exception {
         // Arrange
         Long userId = 1L;
-        when(orderService.getUserOrders(userId)).thenReturn(Arrays.asList());
+        when(orderService.getUserOrders(userId)).thenReturn(Collections.emptyList());
 
         // Act & Assert
         mockMvc.perform(get("/api/orders/user/{userId}", userId)
@@ -183,7 +191,7 @@ class OrderControllerTest {
         Long userId = 1L;
         int year = 2024;
         int month = 12;
-        List<Order> orders = Arrays.asList(testOrder);
+        List<Order> orders = List.of(testOrder);
         when(orderService.getOrdersByDateRange(eq(userId), any(LocalDateTime.class), any(LocalDateTime.class)))
                 .thenReturn(orders);
 
@@ -207,7 +215,7 @@ class OrderControllerTest {
         int year = 2024;
         int month = 1;
         when(orderService.getOrdersByDateRange(eq(userId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList());
+                .thenReturn(Collections.emptyList());
 
         // Act & Assert
         mockMvc.perform(get("/api/orders/dashboard/{userId}", userId)
@@ -227,7 +235,7 @@ class OrderControllerTest {
         Long userId = 1L;
         String startDate = "2024-12-01T00:00:00";
         String endDate = "2024-12-31T23:59:59";
-        List<Order> orders = Arrays.asList(testOrder);
+        List<Order> orders = List.of(testOrder);
         when(orderService.getOrdersByDateRange(eq(userId), any(LocalDateTime.class), any(LocalDateTime.class)))
                 .thenReturn(orders);
 
@@ -292,35 +300,39 @@ class OrderControllerTest {
     }
 
     @Test
-    void purchaseProducts_ShouldHandleInsufficientBalanceException() throws Exception {
+    void purchaseProducts_ShouldHandleInsufficientBalanceError() throws Exception {
         // Arrange
         Long userId = 1L;
+        OrderResult errorResult = OrderResult.error("Insufficient balance in bank account");
         when(userService.findById(userId)).thenReturn(Optional.of(testUser));
-        when(orderService.createOrder(testUser))
-                .thenThrow(new IllegalArgumentException("Insufficient balance in bank account"));
+        when(orderService.createOrder(testUser, testBankAccountNumber)).thenReturn(errorResult);
 
         // Act & Assert
         mockMvc.perform(post("/api/orders/purchase/{userId}", userId)
+                .param("bankAccountNumber", testBankAccountNumber)
                 .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("Insufficient balance in bank account"));
 
-        verify(orderService, times(1)).createOrder(testUser);
+        verify(orderService, times(1)).createOrder(testUser, testBankAccountNumber);
     }
 
     @Test
-    void purchaseProducts_ShouldHandleBankAccountNotFoundException() throws Exception {
+    void purchaseProducts_ShouldHandleBankAccountNotFoundError() throws Exception {
         // Arrange
         Long userId = 1L;
+        OrderResult errorResult = OrderResult.error("User must have a bank account number to place an order");
         when(userService.findById(userId)).thenReturn(Optional.of(testUser));
-        when(orderService.createOrder(testUser))
-                .thenThrow(new IllegalArgumentException("User must have a bank account number to place an order"));
+        when(orderService.createOrder(testUser, testBankAccountNumber)).thenReturn(errorResult);
 
         // Act & Assert
         mockMvc.perform(post("/api/orders/purchase/{userId}", userId)
+                .param("bankAccountNumber", testBankAccountNumber)
                 .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest());
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string("User must have a bank account number to place an order"));
 
-        verify(orderService, times(1)).createOrder(testUser);
+        verify(orderService, times(1)).createOrder(testUser, testBankAccountNumber);
     }
 
     @Test
@@ -345,7 +357,7 @@ class OrderControllerTest {
         int year = 2024;
         int month = 1; // January
         when(orderService.getOrdersByDateRange(eq(userId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList());
+                .thenReturn(Collections.emptyList());
 
         // Act & Assert
         mockMvc.perform(get("/api/orders/dashboard/{userId}", userId)
@@ -365,7 +377,7 @@ class OrderControllerTest {
         int year = 2024;
         int month = 12; // December
         when(orderService.getOrdersByDateRange(eq(userId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                .thenReturn(Arrays.asList(testOrder));
+                .thenReturn(List.of(testOrder));
 
         // Act & Assert
         mockMvc.perform(get("/api/orders/dashboard/{userId}", userId)
